--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div>
         <p> this my first web</p>
         <h2>paragraph</h2>
+        <img src="styles/Images/Gavi.jpg" alt="photo of gavi">
     </div>
 </body>
 </html>
