--- a/bus.html
+++ b/bus.html
@@ -9,7 +9,7 @@
     <div class="main">
         <div class="navbar">
             <div class="icon">
-                <div class="logo">MrZak</div>
+                <h2 class="logo">MrZak</h2>
             </div>
         </div>
     </div>
