--- a/bus.html
+++ b/bus.html
@@ -25,6 +25,15 @@
                     <input class="srch"type="search" name="" placeholder="type to text">
                     <a href="#"> <button class="btn">search</button></a>
                 </div>
+                <br>
+                <br>
+                <div class="content">
+                    <h3>Web Design & Development Course</h3>
+                    <p class="par">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est illo deleniti 
+                        aperiam omnis voluptatem aut!<br> Quidem officiis nemo possimus? Eum voluptates consectetur, 
+                        quasi eaque<br> optio modi quidem repellendus praesentium minus?</p>
+                        <button class="cn"><a href="#">JOIN US</a></button>
+                </div>
             </div>
         </div>
     </div>
