--- a/bus.html
+++ b/bus.html
@@ -28,11 +28,19 @@
                 <br>
                 <br>
                 <div class="content">
-                    <h3>Web Design & Development Course</h3>
-                    <p class="par">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est illo deleniti 
-                        aperiam omnis voluptatem aut!<br> Quidem officiis nemo possimus? Eum voluptates consectetur, 
-                        quasi eaque<br> optio modi quidem repellendus praesentium minus?</p>
+                    <h2>Web Design & <span>Development</span> Course</h2>
+                    <p class="par"> Lorem ipsum, dolor sit amet conssectetur adipisicing elit. Est illo deleniti 
+                        aperiam omnis voluptatem aut!<br> Quidem officiis nemo possimus? Eum voluptates consectetur, quasi eaque
+                        <br> optio modi quidem repellendus praesentium minus? </p>
                         <button class="cn"><a href="#">JOIN US</a></button>
+                </div>
+                <div class="form">
+                    <h2>Login Here</h2>
+                    <input type="email" name="email" placeholder="Enter Email Here">
+                    <input type="password" name="" placeholder="Enter password Here">
+                    <button class="btn"><a href="#">Login</a></button>
+                    <p class="link">Don't have an account</p><br>
+                    <p class="liw">Log in with</p>
                 </div>
             </div>
         </div>
